@@ -263,6 +263,8 @@ Trunk - Unreleased
     HIVE-529. Some cleanup for join operator
     (Zheng Shao via namit)
 
+    HIVE-573. Fix TestHiveServer. (Raghotham Murthy via zshao)
+
 Release 0.3.1 - Unreleased
 
   INCOMPATIBLE CHANGES
